# scan-sentinel

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: collect.yml
src/sentinel/: __init__.py  aggregator.py  cli.py  collector.py  reporter.py  watcher.py
tests/: test_collector.py
